--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -53,3 +53,30 @@
         padding: 0px 0px 10px 10px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: 100%;
+    }
+
+    .composer_box {
+        min-width: 100px;
+        max-width: 200px;
+        padding: auto;
+    }
+
+    .image {
+        height: 150px;
+        max-width: 100%;
+    }
+
+    .signature {
+        height: 25px;
+        max-width: 100%;
+        margin: auto;
+        /*-border: 3px solid green;*/
+        padding: 0px 0px 10px 10px;
+    }
+}
